--- a/Mechatronics Robot/platformio.ini
+++ b/Mechatronics Robot/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+lib_deps = 
+	nrf24/RF24@^1.4.8
+	adafruit/Adafruit PWM Servo Driver Library@^3.0.2
