--- a/Mechatronics Pico W/platformio.ini
+++ b/Mechatronics Pico W/platformio.ini
@@ -8,7 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanorp2040connect]
-platform = raspberrypi
-board = nanorp2040connect
+[env:pico]
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = pico
 framework = arduino
+board_build.core = earlephilhower
+board_build.filesystem_size = 0.5m
