--- a/Mechatronics Robot/platformio.ini
+++ b/Mechatronics Robot/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	nrf24/RF24@^1.4.8
 	adafruit/Adafruit PWM Servo Driver Library@^3.0.2
+	arduino-libraries/Servo@^1.2.1
